syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.trendingmovieservice";
option java_outer_classname = "TrendingMovieProto";

package trendingmovie;

service TrendingMovieService {
    rpc GetTrendingMovies (Empty) returns (CatalogItemList);
}

message Empty {}

message CatalogItem {
    string name = 1;
    string description = 2;
    int32 rating = 3;
}

message CatalogItemList {
    repeated CatalogItem items = 1;
}